added accurate time block channel in both shorts and video page req listing channels

--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,14 @@
     <hr>
     <button id="addChannelBtn"> + Block Current Channel</button>
     <button id="removeChannelBtn"> - Unblock Current Channel</button>
+
+    <div>
+      <h3>📜 Blocked Channels</h3>
+      <div id="blockedChannelsList" 
+          style="max-height: 150px; overflow-y: auto; border: 1px solid #ccc; padding: 5px; border-radius: 5px;">
+        <p style="color: gray; font-size: 12px;">No blocked channels yet.</p>
+      </div>
+    </div>
   </div>
   <script src="popup.js"></script>
 </body>
